--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
     <button class="ca-copy" onclick="copyCA()">Copy</button>
   </div>
 
-  <a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">Buy on BaseSwap</a>
-  <a class="button" href="https://app.uniswap.org/#/swap?outputCurrency=0xD6Aa74b7d3C416A1Fea5F84b8949409aC428708C&chain=base" target="_blank">Buy $ZOOP</a>
+  <a class="button" href="https://dexscreener.com/base/0x4bb9b3cfc81bbda1f381c23d8e33ab6f8f069ea0" target="_blank">Buy on DEX SCREENER</a>
+  <a class="button" href="https://app.uniswap.org/#/swap?outputCurrency=0xD6Aa74b7d3C416A1Fea5F84b8949409aC428708C&chain=base" target="_blank">Buy on Uniswap</a>
   <a class="button" href="whitepaper.pdf" target="_blank">Whitepaper</a>
 
   <section class="chart-section">
