--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     .slogan {
       font-size: 1.25rem;
       margin-bottom: 0.75rem;
-      color: #b1ffe6;
+      color: #39ff14;
       letter-spacing: 1px;
     }
     h1 {
@@ -81,7 +81,7 @@
     .tokenomics-info {
       margin-bottom: 0.9rem;
       font-size: 1.1rem;
-      color: #aaffcc;
+      color: #39ff14;
     }
     .ca-section {
       display: flex;
@@ -100,7 +100,7 @@
       background: #181f1c;
       border-radius: 6px;
       padding: 0.22rem 0.5rem;
-      color: #86ffd9;
+      color: #39ff14;
       font-family: monospace;
       font-size: 1.03rem;
       margin-right: 0.5rem;
@@ -112,7 +112,7 @@
     }
     .ca-copy {
       padding: 0.13rem 0.7rem;
-      background: #00ff99;
+      background: #39ff14;
       border-radius: 6px;
       border: none;
       font-weight: bold;
