--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <span id="caAddress" class="ca-address">0xd6aa74b7d3c416a1fea5f84b8949409ac428708c</span>
     <button class="ca-copy" onclick="copyCA()">Copy</button>
   </div>
-  <a class="button button-base" href="https://dexscreener.com/base/0xad158e0ee48eaff0b2fdf09b837a5745437415e3" target="_blank">Buy on DexScreener</a>
+  <a class="button button-base" href="https://dexscreener.com/base/0xad158e0ee48eaff0b2fdf09b837a5745437415e3" target="_blank">Buy/Swap ZOOP/WETH on DexScreener</a>
   <a class="button button-uniswap" href="https://app.uniswap.org/#/swap?outputCurrency=0xD6Aa74b7d3C416A1Fea5F84b8949409aC428708C&chain=base" target="_blank">Buy/Swap on UniSwap</a>
   <a class="button button-whitepaper" href="whitepaper.pdf" target="_blank">Whitepaper</a>  <section class="chart-section">
     <h2>Tokenomics</h2>
