--- a/index.html
+++ b/index.html
@@ -275,9 +275,11 @@ function copyCA() {
   <p>03.2025 – DAO Voting + Airdrops</p>
   <p>04.2025 – Staking & NFT Integration</p>
   <p>06.2025 – CEX Listings + Charity Expansion</p>  <div class="social-icons">
-    <a href="https://x.com/BaZoopToken" target="_blank">X (Twitter)</a>
-    <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
-  </div>
+  <a href="https://x.com/BaZoopToken" target="_blank">X (Twitter)</a>
+  <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
+  <a href="https://t.me/+restaV69PoZhM2Mx" target="_blank">Telegram</a>
+  <a href="https://discord.gg/NGQVYhGh" target="_blank">Discord</a>
+</div>
   <footer>
     Built by Aletheia Labs | Follow us @BazoopToken
   </footer>
