--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    <img src="GrnICGRW4AA4vz0.jpg" alt="Alien Mascot" class="alien-pic" />
-    <img src="logo.png" alt="BAZOOP UFO Logo" class="main-logo" />
-    <img src="GrnICGRW4AA4vz0.jpg" alt="Alien Mascot" class="alien-pic" />
-  </div>
+ <div class="top-bar">
+  <img src="AlienBoss.png" alt="Alien Mascot" class="alien-pic" />
+  <img src="logo.png" alt="BAZOOP UFO Logo" class="main-logo" />
+  <img src="AlienBoss.png" alt="Alien Mascot" class="alien-pic" />
+</div>
   <div class="slogan">Beam Wealth. Blast Charity. Meme Responsibly.</div>
   <h1>BAZOOP ($ZOOP)</h1>
   <div class="tokenomics-info">
