--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
   <p>06.2025 – CEX Listings + Charity Expansion</p>
 
   <div class="social-icons">
-    <a href="https://x.com/BaZoopToken" target="_blank">X (Twitter)</a>
+    <a href="https://x.com/BaZoopToken" target="_blank">X</a>
     <a href="https://github.com/aletheialabs/bazoop-token" target="_blank">GitHub</a>
-    <a href="https://t.me/+restaV69PoZhM2Mx" target="_blank">Telegram</a>
+    <a href="https://t.me/Zoop_Token" target="_blank">Telegram</a>
     <a href="https://discord.gg/NGQVVYhGh" target="_blank">Discord</a>
   </div>
 
